fix: use grid instead of flex to align img and small screen ok

--- a/apps/datahub/src/app/record/header-record/header-record.component.css
+++ b/apps/datahub/src/app/record/header-record/header-record.component.css
@@ -1,5 +1,5 @@
 :host {
-  --gn-ui-badge-padding: 2px 8px;
+  --gn-ui-badge-padding: 3px 8px;
   --gn-ui-badge-opacity: 1;
   --gn-ui-badge-text-size: 12px;
 }
